--- a/mobilework.html
+++ b/mobilework.html
@@ -177,7 +177,7 @@
 
     <!-- 右边：Lemon Yuzu Fruit Tea -->
     <div class="cover-group">
-      <a href="fruittea.html">
+      <a href="mobilepackaging.html">
         <img class="cover" src="packaging01(mobile).svg" alt="Lemon Yuzu Fruit Tea">
       </a>
       <p class="go">Lemon Yuzu Fruit Tea</p>
@@ -248,5 +248,6 @@
 
 </body>
 </html>
+
 
 
