--- a/work.html
+++ b/work.html
@@ -195,6 +195,16 @@
       }
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YNX48M29QH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YNX48M29QH');
+</script>
+
 </head>
 <body data-page="work">
 
@@ -307,5 +317,7 @@
 
 </body>
 </html>
+
+
 
 
