--- a/mobilework.html
+++ b/mobilework.html
@@ -141,6 +141,16 @@
     .Linkedln { top: 4057px; }
     .Instagram{ top: 4120px; }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YNX48M29QH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YNX48M29QH');
+</script>
+
 </head>
 <body data-page="about">
 
@@ -253,5 +263,9 @@
 
 </body>
 </html>
+
+
+
+
 
 
