--- a/mobile.html
+++ b/mobile.html
@@ -240,8 +240,7 @@
     <hr class="line001">
 
     <p class="japanese">ヴィンセント・ロウシック・チング。2002年生まれ、マレーシア・ジョホールバル出身。日本語、中国語、英語、マレー語の4ヶ言語を話します。現在、東京造形大学造形学部デザイン学科インダストリアル専攻の3年生です。大学ではUI/UXデザインと工業デザインの両方を学んでいます。人々の暮らしに価値と喜びをもたらす製品やサービスをデザインすることを目指しています。</p>
-    <p class="description">I'm Vincent Low Sik Ching, a third-year Industrial Design student at Tokyo Zokei University, originally from Johor Bahru, Malaysia. I aim to design products and services that bring value and joy to people's lives.</p>
-    <p class="education-title">EDUCATION 経歴</p>
+    <p class="description">I'm Vincent Low Sik Ching, a third-year Industrial Design student at Tokyo Zokei University, originally from Johor Bahru, Malaysia. I create user-centered, intuitive digital experiences that deliver value and joy to people's lives.
     <p class="toolsbox01">TOOLKIT ツールセット</p>
     <p class="school-name">TZU 東京造形大学</p>
     <p class="menu">Industrial Design , Interaction Design</p>
