--- a/mobilegoevent.html
+++ b/mobilegoevent.html
@@ -104,7 +104,7 @@
       width: 100vw;
       min-height: 1300px;
       margin-top: 100px;
-      background-image: url('rectangle mobile01.svg');
+      background-image: url('Rectangle mobile01.svg');
       background-size: cover;
       background-position: center;
       padding: 100px 0 50px;
@@ -371,3 +371,4 @@
 
 </body>
 </html>
+
